# cog

./: go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yaml
pkg/cli/: assist.go  build.go  predict.go  root.go
pkg/config/: config.go  cuda_base_images.json  torch_compatibility_matrix.json
pkg/config/data/: config_schema_v1.0.json
pkg/docker/: build.go  run.go
pkg/dockerfile/: base.go  generator.go
pkg/image/: build.go
python/cog/: predictor.py  types.py  websockets_server.py
python/cog/server/: clients.py  eventtypes.py  http.py  runner.py  worker.py
python/tests/: test_types.py
python/tests/server/: test_http_input.py  test_http_output.py  test_runner.py  test_worker.py
python/tests/server/fixtures/: input_file.py
rust/: Cargo.toml  README.md
rust/assets/: async_predict.py  predict.py  predict_no_setup.py
rust/old/: kameo.rs  lib.rs  main.rs  old-main.rs  runner-as-actor.rs  runner-with-pyo3.rs  runner-with-tokio.rs
rust/src/: connection.rs  lib.rs  main.rs  runner.rs  server.rs
rust/src/py/: stream.rs
